{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 25,
  "lineage": "f07837b0-97ad-3ef3-b466-6352cdd5a35f",
  "resources": [
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:network-acl/acl-0cea1769b1fd59c64",
            "default_network_acl_id": "acl-0cea1769b1fd59c64",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cea1769b1fd59c64",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "subnet_ids": [
              "subnet-03d80fac37ad9a4ea",
              "subnet-064790c73fb57a137",
              "subnet-08854c305dca2f5a5"
            ],
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-0ed63cebcee16f010",
            "default_route_table_id": "rtb-0ed63cebcee16f010",
            "id": "rtb-0ed63cebcee16f010",
            "owner_id": "596757758746",
            "propagating_vgws": null,
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-094b5fe52972d5a33",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-094b5fe52972d5a33",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6763a6800279c37",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:elastic-ip/eipalloc-0f6763a6800279c37",
            "domain": "vpc",
            "id": "eipalloc-0f6763a6800279c37",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-215-23-108.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.23.108",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a29a2da42887fe0",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:elastic-ip/eipalloc-06a29a2da42887fe0",
            "domain": "vpc",
            "id": "eipalloc-06a29a2da42887fe0",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-136-5-167.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.5.167",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:internet-gateway/igw-06553d95108ed20e8",
            "id": "igw-06553d95108ed20e8",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6763a6800279c37",
            "association_id": "eipassoc-0ca885e94b92f2ade",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02bf6f4d08d3ac59c",
            "network_interface_id": "eni-0a0c3099ae40bb060",
            "private_ip": "10.0.1.169",
            "public_ip": "13.215.23.108",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d80fac37ad9a4ea",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a29a2da42887fe0",
            "association_id": "eipassoc-09d199d08b7b1b07c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-027d0694838827501",
            "network_interface_id": "eni-09c126ecebf9505ce",
            "private_ip": "10.0.2.77",
            "public_ip": "18.136.5.167",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08854c305dca2f5a5",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e6c2adf8f0e902ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02bf6f4d08d3ac59c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e6c2adf8f0e902ca",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e6c2adf8f0e902ca"
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06d7b892f4eb7c0321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-027d0694838827501",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-06d7b892f4eb7c032",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-06d7b892f4eb7c032"
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06553d95108ed20e8",
            "id": "r-rtb-03a8db525a3e1fbdf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03a8db525a3e1fbdf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03a8db525a3e1fbdf"
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-0e6c2adf8f0e902ca",
            "id": "rtb-0e6c2adf8f0e902ca",
            "owner_id": "596757758746",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "rtb-0e6c2adf8f0e902ca",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-06d7b892f4eb7c032",
            "id": "rtb-06d7b892f4eb7c032",
            "owner_id": "596757758746",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "rtb-06d7b892f4eb7c032",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-03a8db525a3e1fbdf",
            "id": "rtb-03a8db525a3e1fbdf",
            "owner_id": "596757758746",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "rtb-03a8db525a3e1fbdf",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c721108b19833e8",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e6c2adf8f0e902ca",
            "subnet_id": "subnet-05cffa32732678bbc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04afd62b0dfb294a9",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-06d7b892f4eb7c032",
            "subnet_id": "subnet-064790c73fb57a137"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ddef43f896bba69",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03a8db525a3e1fbdf",
            "subnet_id": "subnet-03d80fac37ad9a4ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1718d4a610c4745",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03a8db525a3e1fbdf",
            "subnet_id": "subnet-08854c305dca2f5a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-05cffa32732678bbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cffa32732678bbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-05cffa32732678bbc",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-064790c73fb57a137",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064790c73fb57a137",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-064790c73fb57a137",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-03d80fac37ad9a4ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d80fac37ad9a4ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-03d80fac37ad9a4ea",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-08854c305dca2f5a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08854c305dca2f5a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            },
            "vpc_id": "vpc-092063ca878f5f601"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-08854c305dca2f5a5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:vpc/vpc-092063ca878f5f601",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cea1769b1fd59c64",
            "default_route_table_id": "rtb-0ed63cebcee16f010",
            "default_security_group_id": "sg-094b5fe52972d5a33",
            "dhcp_options_id": "dopt-03e77db624ee03b31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092063ca878f5f601",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed63cebcee16f010",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "duongcon-vpc"
            },
            "tags_all": {
              "Name": "duongcon-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "vpc-092063ca878f5f601",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}